# NacionalSign_01

./: .env.example  .gitattributes  .gitignore  README.md  backup_script.ps1  document.py  documents.py  e melhorias no fluxo de documentos  head_workflow.py  package-lock.json  replace_protocol.py  start_nacionalsign.py  status do git.txt  temp.txt  temp_api.ts  temp_file.txt  temp_test_upload.py  temp_upload2.py  temp_upload_optional.py  test_multi_upload.py  test_server.py  update_header.py
backend/: .env  .env.example  Dockerfile  README.md  add_archived_enum.py  alembic.ini  check_token.py  cleanup_deleted_documents.py  create_admin.py  debug_preview.py  dev.db  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyproject_clean.toml  temp_fixture.db  temp_storage.py  test_deleted_validation.py  test_list_docs.py  test_pg_connection.py  test_trash_protection.py  test_trash_validation.py
backend/alembic/: env.py  script.py.mako
backend/app/: __main__.py  main.py
backend/docs/: automatic_cleanup.md  frontend_signing_plan.md  signing_flow_design.md
backend/scripts/: list_users.py
backend/signing-agent-prototype/: Program.cs  README.md  SigningAgent.sln  SigningAgentHost.cs  sample-document.txt  sample-document.txt.p7s
backend/tests/: conftest.py  test_billing_proration.py  test_billing_retry.py  test_billing_usage_endpoint.py  test_customers_api.py  test_dashboard_metrics_endpoint.py  test_e2e_full.py  test_health.py  test_icp_integration.py  test_icp_report_generation.py  test_integration.py  test_notifications.py  test_quota_enforcement.py  (+8 more)
(+424 files in other folders)
